Modified .gitignore to ignore venv, app.py to host port 8000, index.html to have cheeta suite

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ touch .gitignore
 
 # Add these lines to ignore unnecessary files
 echo "conversionvenv/
+conversionvenv/
 __pycache__/
 *.pyc
 *.pyo
