--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     labels:
       - "traefik.http.routers.myapp.rule=Host(`srv726877.hstgr.cloud`)"
       - "traefik.http.routers.myapp.tls.certresolver=myresolver"
-    security-opt:
+    security_opt:
       - seccomp=./seccomp.json
     build: .
     ports:
