--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ touch .gitignore
 # Add these lines to ignore unnecessary files
 echo "conversionvenv/
 conversionvenv/
+convertervenv/
 __pycache__/
 *.pyc
 *.pyo
