--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     labels:
       - "traefik.http.routers.myapp.rule=Host(`srv726877.hstgr.cloud`)"
       - "traefik.http.routers.myapp.tls.certresolver=myresolver"
-    security_opt:
-      - seccomp=./seccomp.json
+    #security_opt:
+    #  - seccomp=./seccomp.json
     build: .
     ports:
       - "8000:8000"
